[package]
name = "rust-driver-bench"
version = "0.1.0"
authors = ["benjirewis <ben.rewis98@gmail.com>"]
edition = "2018"

[features]
default = ["tokio-runtime"]
tokio-runtime = [
  "tokio/fs",
  "tokio/macros",
  "tokio/rt",
  "tokio/rt-multi-thread",
  "tokio-stream",
  "mongodb/tokio-runtime"
]
async-std-runtime = ["async-std", "mongodb/async-std-runtime"]

[dependencies]
mongodb = { path = "..", default-features = false }
serde_json = "1.0.59"
once_cell = "1.19.0"
clap = "2.33.3"
indicatif = "0.15.0"
async-trait = "0.1.41"
tokio = { version = "1.6", features = ["sync"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1.6", features = ["io-util"], optional = true }
# "unstable" feature is needed for `spawn_blocking`, which is only used in task setup
async-std = { version = "1.9.0", optional = true, features = ["attributes", "unstable"] }
futures = "0.3.8"
anyhow = "1.0.34"
serde = "1"
num_enum = "0.5"
