[package]
name = "rust-driver-bench"
version = "0.1.0"
authors = ["benjirewis <ben.rewis98@gmail.com>"]
edition = "2018"

[dependencies]
mongodb = { path = "../driver" }
serde_json = "1.0.59"
clap = "2.33.3"
indicatif = "0.15.0"
async-trait = "0.1.41"
tokio = { version = "1.6", features = ["sync", "fs"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1.6", features = ["io-util"] }
futures = "0.3.8"
anyhow = "1.0.34"
serde = "1"
num_enum = "0.5"
futures-util = "0.3.30"
