[package]
name = "mongodb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mongodb = { path = "..", features = ["fuzzing"] }

[[bin]]
name = "header_length"
path = "fuzz_targets/header_length.rs"
test = false
doc = false
