[package]
name = "mongodb-internal-macros"
version = "3.5.0"
description = "Internal macros for the mongodb crate"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_magic = { version = "0.5.1", features = ["proc_support"] }
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full", "parsing", "proc-macro", "extra-traits"] }

[lib]
proc-macro = true
