[package]
name = "change_stream_legacy"
authors = ["Abraham Egnor <abraham.egnor@mongodb.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.11"
serde_yaml = "0.8"
clap = { version = "3.0.13", features = ["derive"] }